feat. updated english translation e rror

--- a/my-react-ts-app/src/locales/en.json
+++ b/my-react-ts-app/src/locales/en.json
@@ -28,7 +28,7 @@
     },
     "item3": {
       "company": "Rogers - TSC",
-      "description": "Worked on Rogers owned The Shopping Channel E-commerce website, developed on a monolithic project  with C# and Angular as the front-end. Contributed to many key components such as Product Search, Product Detials, Product Items pages."
+      "description": "Worked on Rogers owned The Shopping Channel E-commerce website, developed on a monolithic project  with C# and Angular as the front-end. Contributed to many key components such as Product Search, Product Details, Product Items pages."
     }
   },
   "companies": {
