--- a/my-react-ts-app/src/locales/en.json
+++ b/my-react-ts-app/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "hero": {
-    "role": "Full Stack Software Engineer",
+    "role": "Full Stack Engineer",
     "text": "From building my own computers, to coding software and architecting enterprise solutions, I've been a full-stack developer with a passion for innovation. With expertise in Java, Spring Boot, React, and cloud technologies, I've driven digital transformation at companies like Intuit and Royal Bank of Canada.",
     "download": "Download Resume",
     "coverLetter": "Download Cover Letter"
