--- a/my-react-ts-app/src/locales/punj.json
+++ b/my-react-ts-app/src/locales/punj.json
@@ -29,6 +29,10 @@
     "item3": {
       "company": "Rogers - TSC",
       "description": "ਰੋਜਰਸ ਦੀ ਮਲਕੀਅਤ ਵਾਲੀ ਦ ਸ਼ਾਪਿੰਗ ਚੈਨਲ ਈ-ਕਾਮਰਸ ਵੈੱਬਸਾਈਟ 'ਤੇ ਕੰਮ ਕੀਤਾ, ਜੋ ਕਿ C# ਅਤੇ ਐਂਗੂਲਰ ਦੇ ਫਰੰਟ-ਐਂਡ ਦੇ ਨਾਲ ਇੱਕ ਮੋਨੋਲੀਥਿਕ ਪ੍ਰੋਜੈਕਟ 'ਤੇ ਵਿਕਸਤ ਕੀਤੀ ਗਈ ਸੀ। ਉਤਪਾਦ ਖੋਜ, ਉਤਪਾਦ ਵੇਰਵੇ, ਉਤਪਾਦ ਆਈਟਮਾਂ ਪੰਨਿਆਂ ਵਰਗੇ ਕਈ ਮੁੱਖ ਹਿੱਸਿਆਂ ਵਿੱਚ ਯੋਗਦਾਨ ਪਾਇਆ।"
+    },
+    "item4": {
+      "company": "NCR",
+      "description": "ਨੈਸ਼ਨਲ ਕੈਸ਼ ਰਜਿਸਟਰ ਵਿੱਚ, ਮੈਂ US ਬੈਂਕ ਲਈ NCR ਟੈਲਰ ਐਪਲੀਕੇਸ਼ਨ ਨੂੰ ਵਧਾਇਆ, YAML-ਅਧਾਰਿਤ SDK ਨਾਲ ਜਾਵਾ ਸਪਰਿੰਗ ਬੂਟ ਮਾਈਕ੍ਰੋਸਰਵਿਸਿਜ਼ ਨੂੰ ਏਕੀਕ੍ਰਿਤ ਕੀਤਾ ਅਤੇ Docker/Kubernetes ਰਾਹੀਂ ਡਿਪਲੌਏ ਕੀਤਾ। ਮੈਂ Jenkins ਨਾਲ CI/CD ਦੀ ਅਗਵਾਈ ਕੀਤੀ, Cucumber E2E ਟੈਸਟ ਲਿਖੇ, ਅਤੇ BitBucket ਅਤੇ Jira ਦੀ ਵਰਤੋਂ ਕਰਕੇ ਰਿਲੀਜ਼ਾਂ ਦਾ ਪ੍ਰਬੰਧਨ ਕੀਤਾ।"
     }
   },
   "companies": {
