--- a/my-react-ts-app/src/locales/hind.json
+++ b/my-react-ts-app/src/locales/hind.json
@@ -29,6 +29,10 @@
     "item3": {
       "company": "Rogers - TSC",
       "description": "रोजर्स के स्वामित्व वाली शॉपिंग चैनल ई-कॉमर्स वेबसाइट पर काम किया, जिसे फ्रंट-एंड के रूप में C# और Angular के साथ एक मोनोलिथिक प्रोजेक्ट पर विकसित किया गया था। उत्पाद खोज, उत्पाद विवरण, उत्पाद आइटम पृष्ठों जैसे कई प्रमुख घटकों में योगदान दिया।"
+    },
+    "item4": {
+      "company": "NCR",
+      "description": "नेशनल कैश रजिस्टर में, मैंने यूएस बैंक के लिए एनसीआर टेलर एप्लिकेशन को बेहतर बनाया, जावा स्प्रिंग बूट माइक्रोसर्विसेज को YAML-आधारित SDK के साथ एकीकृत किया और डॉकर/कुबेरनेट्स के माध्यम से तैनात किया। मैंने जेनकिंस के साथ CI/CD का नेतृत्व किया, कुकुम्बर E2E टेस्ट लिखे, और बिटबकेट और जीरा का उपयोग करके रिलीज का प्रबंधन किया।"
     }
   },
   "companies": {
